if (CUDA)
  add_definitions(-DHAVE_CUDA=1)
elseif (HIP)
  add_definitions(-DHAVE_HIP=1)
elseif (OPENMP)
  add_definitions(-DHAVE_OPENMP=1)
elseif (THREADS)
  add_definitions(-DHAVE_THREADS=1)
endif()

set(SRC_Files user_material_functions.cpp)
add_library(user_material_interface OBJECT ${SRC_Files})

if (BUILD_EVPFFT_FIERRO)
  add_definitions(-DBUILD_EVPFFT_FIERRO=1)
  add_subdirectory(../../EVPFFT EVPFFT)
  include_directories(../../EVPFFT)
  target_link_libraries(user_material_interface evpfft)
endif()
